--- a/StudentAccounting/ClientApp/public/index.html
+++ b/StudentAccounting/ClientApp/public/index.html
@@ -11,6 +11,17 @@
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
+    <script>
+      window.fbAsyncInit = function() {
+        FB.init({
+          appId            : '1024763727929763',
+          autoLogAppEvents : true,
+          xfbml            : true,
+          version          : 'v9.0'
+        });
+      };
+    </script>
+    <script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_US/sdk.js"></script>
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
